Prevent long words from causing headings to overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -615,6 +615,7 @@ article {
 
 :--heading {
   inline-size: fit-content;
+  max-inline-size: 100%;
   font-weight: 700;
   line-height: 1.2;
   text-wrap-style: pretty;
